--- a/src/components/main-container/mainContainer.css
+++ b/src/components/main-container/mainContainer.css
@@ -4,3 +4,11 @@
     width: 100%;
     height: calc(100vh - 71.59px);
 }
+
+h1 {
+    margin: 20px;
+    margin-left: 30px;
+    color: #3C6255;
+    font-weight: bold;
+    
+}
