--- a/src/components/card/card-container.css
+++ b/src/components/card/card-container.css
@@ -1,17 +1,63 @@
-.card-container{
-    display: grid;
-    margin-top: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
-    background-color: rgba(198, 235, 197, 90%); 
+
+/* Large screen */
+@media (min-width:991px) {
+    .card-container{
+        display: grid;
+        padding: 30px;
+        grid-template-columns: 33.5% 33% 32.5%;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 15px;
+        grid-row-gap: 30px;
+        background-color: rgba(198, 235, 197, 90%); 
+        grid-auto-flow: row;
+    }
     
+    .card-item {
+        display: flex;
+        margin: 15px;
+        align-items: center ;
+        justify-content: center;  
+    }    
 }
 
-.card-item {
-    display: flex;
-    margin: 15px;
-    align-items: center ;
-    justify-content: center;
+/* Medium Screen */
+@media (min-width:581px) and (max-width:990px) {
+    .card-container{
+        display: grid;
+        padding: 30px;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 15px;
+        grid-row-gap: 30px;
+        background-color: rgba(198, 235, 197, 90%); 
+        grid-auto-flow: row;
+    }
+    
+    .card-item {
+        display: flex;
+        margin: 15px;
+        align-items: center ;
+        justify-content: center;  
+    }    
+}
+
+/* Small Screen */
+@media (max-width:580px) {
+    .card-container{
+        display: grid;
+        padding: 20px;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(6, 1fr);
+        grid-column-gap: 15px;
+        grid-row-gap: 30px;
+        background-color: rgba(198, 235, 197, 90%); 
+        grid-auto-flow: row;
+    }
+    
+    .card-item {
+        display: flex;
+        margin: 15px;
+        align-items: center ;
+        justify-content: center;  
+    }    
 }
