--- a/src/components/main-container/mainContainer.css
+++ b/src/components/main-container/mainContainer.css
@@ -1,15 +1,11 @@
-.carousel {
-    background-color: #B9E2DE;
-    margin: 0;
-    width: 100%;
-    height: calc(100vh - 71.59px);
-} 
+h3 {
+    color: #3C6255;
+    font-weight: bold;
+}
 
 @media (min-width:581px) {
     h3 {
         margin: 30px;
-        color: #3C6255;
-        font-weight: bold;
     }
 
 }
@@ -17,8 +13,7 @@
 @media (max-width:580px){
     h3 {
         margin: 20px;
-        color: #3C6255;
-        font-weight: bold;
+        font-size: 16px;
     }
    
 }
