--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,5 +1,5 @@
 .carousel .carousel-img{
-    background-color: #B9E2DE;
+    background-color: #C6EBC5;
     margin: 0;
     min-width: 100%;
     max-height: 100vh;
