--- a/src/components/main-container/mainContainer.css
+++ b/src/components/main-container/mainContainer.css
@@ -1,19 +1,23 @@
-h3 {
+.main-container {
+    background-color: #C6EBC5;
+}
+
+h4 {
     color: #3C6255;
     font-weight: bold;
 }
 
 @media (min-width:581px) {
-    h3 {
-        margin: 30px;
+    h4 {
+        margin: 30px 30px 0 30px;
     }
 
 }
 
 @media (max-width:580px){
-    h3 {
-        margin: 20px;
-        font-size: 16px;
+    h4 {
+        margin: 20px 20px 0 20px;
+        font-size: 18px;
     }
    
 }
