--- a/src/components/main-container/mainContainer.css
+++ b/src/components/main-container/mainContainer.css
@@ -1,9 +1,9 @@
 .main-container {
-    background-color: #C6EBC5;
+    background-color: #e0fdf5;
 }
 
 h4 {
-    color: #3C6255;
+    color: #ea80b0;
     font-weight: bold;
 }
 
