--- a/src/components/card/card-container.css
+++ b/src/components/card/card-container.css
@@ -8,7 +8,7 @@
         grid-template-rows: 1fr;
         grid-column-gap: 30px;
         grid-row-gap: 30px;
-        background-color: rgb(198, 235, 197); 
+        background-color: e0fdf5; 
         justify-content: center;
     }
     
@@ -29,7 +29,7 @@
         grid-template-rows: repeat(2, 1fr);
         grid-column-gap: 25px;
         grid-row-gap: 30px;
-        background-color: rgb(198, 235, 197); 
+        background-color: #e0fdf5; 
         justify-content: center;
     }
     
@@ -50,7 +50,7 @@
         grid-template-rows: repeat(4, 1fr);
         grid-column-gap: 15px;
         grid-row-gap: 30px;
-        background-color: rgb(198, 235, 197); 
+        background-color: #e0fdf5; 
         justify-content: center;
     }
     
