--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -10,27 +10,35 @@
 .content {
     display: inline;
     color: white;
+    align-items: center;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
 }
 
 h5 {
     display: flex;
     margin: 20px;
-    justify-content: center;
+    justify-content: left;
     font-weight: 600;
     font-size: 20px;
+    align-items: center;
 }
 
 h6{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin: 5px;  
     font-size: 16px;
+    align-items: center;
 }
 
 .contact {
-    margin: 10px;
-    font-weight: 600;
-}
+    font-weight: 600; 
+    justify-content: left;
+} 
 
 /* Medium Screen */
 @media (min-width:581px) and (max-width:990px) {
